# porth-core

./: .actrc  .clang-format  .clang-tidy  .gitignore  .grype.yaml  .pre-commit.yaml  BENCHMARKS.md  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE.md  PorthClock_8hpp.html  PorthClock_8hpp__dep__incl.map  PorthClock_8hpp__dep__incl.md5  PorthClock_8hpp__incl.map  PorthClock_8hpp__incl.md5  PorthClock_8hpp_source.html  PorthDeviceLayout_8hpp.html  PorthDeviceLayout_8hpp__dep__incl.map  PorthDeviceLayout_8hpp__dep__incl.md5  PorthDeviceLayout_8hpp__incl.map  PorthDeviceLayout_8hpp__incl.md5  PorthDeviceLayout_8hpp_source.html  PorthDriver_8hpp.html  PorthDriver_8hpp__dep__incl.map  PorthDriver_8hpp__dep__incl.md5  PorthDriver_8hpp__incl.map  PorthDriver_8hpp__incl.md5  PorthDriver_8hpp_source.html  PorthHugePage_8hpp.html  PorthHugePage_8hpp__dep__incl.map  PorthHugePage_8hpp__dep__incl.md5  PorthHugePage_8hpp__incl.map  PorthHugePage_8hpp__incl.md5  PorthHugePage_8hpp_source.html  PorthMetric_8hpp.html  PorthMetric_8hpp__dep__incl.map  PorthMetric_8hpp__dep__incl.md5  PorthMetric_8hpp__incl.map  (+212 more)
.devcontainer/: DockerFile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
benchmarks/: CMakeLists.txt  porth_bench.cpp  porth_vs_std.cpp
cmake/: PorthConfig.cmake.in  ebpf.cmake
configs/: newport_default.json
docker/: Dockerfile
docs/: VALIDATION_PROTOCOL.md  VISION.md
examples/: CMakeLists.txt  calibrate_clock.cpp  mock_handshake.cpp  network_portal_demo.cpp  porth-sim-ctl.cpp  porth_bench.cpp  porth_full_demo.cpp  porth_vs_std.cpp  std_baseline.cpp  test_sim_chaos.cpp  test_sim_phy.cpp  test_sim_protocol.cpp  zero_copy_handshake.cpp
include/porth/: PorthClock.hpp  PorthDeviceLayout.hpp  PorthDriver.hpp  PorthHugePage.hpp  PorthMetric.hpp  PorthMockDevice.hpp  PorthNetworkPortal.hpp  PorthPDK.hpp  PorthRegister.hpp  PorthRingBuffer.hpp  PorthShuttle.hpp  PorthSimDevice.hpp  PorthSimPHY.hpp  PorthTelemetry.hpp  PorthUtil.hpp  PorthVFIODevice.hpp  PorthXDPPortal.hpp  porth_xdp_kern.c
scripts/: build.sh  check.sh  demo.sh  generate_resilience_report.py  latency_guard.py  launch_sandbox.sh  setup_sandbox.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+57 more)
tests/: CMakeLists.txt  fuzz_ring_buffer.cpp  test_metrics.cpp  test_physics_barrier.cpp  test_physics_response.cpp  test_safety_trip.cpp  test_sim_chaos.cpp  test_sim_domains.cpp  test_sim_phy.cpp  test_sim_protocol.cpp  unit_ring_buffer.cpp
tools/: CMakeLists.txt  porth-chaos.cpp  porth-check-env.cpp  porth-sim-ctl.cpp  porth_stat.cpp
